// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GET all shoes gets all shoes 1`] = `
Object {
  "data": Array [
    Object {
      "Brand": "nike",
      "Collection": "hypes",
      "ID": 1,
      "Section": "mens",
      "Stars": 3.5,
      "Style": "basketball",
      "colours": Array [
        Object {
          "colour": "red",
          "hex": "ff0000",
        },
        Object {
          "colour": "blue",
          "hex": "0000ff",
        },
      ],
      "description": "run",
      "name": "airss",
      "price": 40,
      "releaseDate": 2938457,
    },
    Object {
      "Brand": "adias",
      "Collection": "air max",
      "ID": 2,
      "Section": "mens",
      "Stars": 2,
      "Style": "basketball",
      "colours": Array [
        Object {
          "colour": "green",
          "hex": "00ff00",
        },
      ],
      "description": "dive",
      "name": "jumpers",
      "price": 80,
      "releaseDate": 2098475298,
    },
    Object {
      "Brand": "adias",
      "Collection": "air max",
      "ID": 3,
      "Section": "womens",
      "Stars": 0,
      "Style": "runners",
      "colours": Array [],
      "description": "sprint",
      "name": "kicks",
      "price": 120,
      "releaseDate": 2098475234,
    },
  ],
}
`;

exports[`GET all shoes with brand nike and stars over 3 1`] = `
Object {
  "data": Array [
    Object {
      "Brand": "nike",
      "Collection": "hypes",
      "ID": 1,
      "Section": "mens",
      "Stars": 3.5,
      "Style": "basketball",
      "colours": Array [
        Object {
          "colour": "red",
          "hex": "ff0000",
        },
        Object {
          "colour": "blue",
          "hex": "0000ff",
        },
      ],
      "description": "run",
      "name": "airss",
      "price": 40,
      "releaseDate": 2938457,
    },
  ],
}
`;

exports[`GET all shoes with brand of nike 1`] = `
Object {
  "data": Array [
    Object {
      "Brand": "nike",
      "Collection": "hypes",
      "ID": 1,
      "Section": "mens",
      "Stars": 3.5,
      "Style": "basketball",
      "colours": Array [
        Object {
          "colour": "red",
          "hex": "ff0000",
        },
        Object {
          "colour": "blue",
          "hex": "0000ff",
        },
      ],
      "description": "run",
      "name": "airss",
      "price": 40,
      "releaseDate": 2938457,
    },
  ],
}
`;

exports[`GET all shoes with brand of nike and style of basketball 1`] = `
Object {
  "data": Array [
    Object {
      "Brand": "nike",
      "Collection": "hypes",
      "ID": 1,
      "Section": "mens",
      "Stars": 3.5,
      "Style": "basketball",
      "colours": Array [
        Object {
          "colour": "red",
          "hex": "ff0000",
        },
        Object {
          "colour": "blue",
          "hex": "0000ff",
        },
      ],
      "description": "run",
      "name": "airss",
      "price": 40,
      "releaseDate": 2938457,
    },
  ],
}
`;

exports[`GET all shoes with collection of hypes 1`] = `
Object {
  "data": Array [
    Object {
      "Brand": "nike",
      "Collection": "hypes",
      "ID": 1,
      "Section": "mens",
      "Stars": 3.5,
      "Style": "basketball",
      "colours": Array [
        Object {
          "colour": "red",
          "hex": "ff0000",
        },
        Object {
          "colour": "blue",
          "hex": "0000ff",
        },
      ],
      "description": "run",
      "name": "airss",
      "price": 40,
      "releaseDate": 2938457,
    },
  ],
}
`;

exports[`GET all shoes with non existent brand 1`] = `
Object {
  "data": Array [],
  "empty": true,
}
`;

exports[`GET all shoes with section of mens 1`] = `
Object {
  "data": Array [
    Object {
      "Brand": "nike",
      "Collection": "hypes",
      "ID": 1,
      "Section": "mens",
      "Stars": 3.5,
      "Style": "basketball",
      "colours": Array [
        Object {
          "colour": "red",
          "hex": "ff0000",
        },
        Object {
          "colour": "blue",
          "hex": "0000ff",
        },
      ],
      "description": "run",
      "name": "airss",
      "price": 40,
      "releaseDate": 2938457,
    },
    Object {
      "Brand": "adias",
      "Collection": "air max",
      "ID": 2,
      "Section": "mens",
      "Stars": 2,
      "Style": "basketball",
      "colours": Array [
        Object {
          "colour": "green",
          "hex": "00ff00",
        },
      ],
      "description": "dive",
      "name": "jumpers",
      "price": 80,
      "releaseDate": 2098475298,
    },
  ],
}
`;

exports[`GET all shoes with section of mens and collection of hypes 1`] = `
Object {
  "data": Array [
    Object {
      "Brand": "nike",
      "Collection": "hypes",
      "ID": 1,
      "Section": "mens",
      "Stars": 3.5,
      "Style": "basketball",
      "colours": Array [
        Object {
          "colour": "red",
          "hex": "ff0000",
        },
        Object {
          "colour": "blue",
          "hex": "0000ff",
        },
      ],
      "description": "run",
      "name": "airss",
      "price": 40,
      "releaseDate": 2938457,
    },
  ],
}
`;

exports[`GET all shoes with stars over 3 1`] = `
Object {
  "data": Array [
    Object {
      "Brand": "nike",
      "Collection": "hypes",
      "ID": 1,
      "Section": "mens",
      "Stars": 3.5,
      "Style": "basketball",
      "colours": Array [
        Object {
          "colour": "red",
          "hex": "ff0000",
        },
        Object {
          "colour": "blue",
          "hex": "0000ff",
        },
      ],
      "description": "run",
      "name": "airss",
      "price": 40,
      "releaseDate": 2938457,
    },
  ],
}
`;

exports[`GET all shoes with style of basketball 1`] = `
Object {
  "data": Array [
    Object {
      "Brand": "nike",
      "Collection": "hypes",
      "ID": 1,
      "Section": "mens",
      "Stars": 3.5,
      "Style": "basketball",
      "colours": Array [
        Object {
          "colour": "red",
          "hex": "ff0000",
        },
        Object {
          "colour": "blue",
          "hex": "0000ff",
        },
      ],
      "description": "run",
      "name": "airss",
      "price": 40,
      "releaseDate": 2938457,
    },
    Object {
      "Brand": "adias",
      "Collection": "air max",
      "ID": 2,
      "Section": "mens",
      "Stars": 2,
      "Style": "basketball",
      "colours": Array [
        Object {
          "colour": "green",
          "hex": "00ff00",
        },
      ],
      "description": "dive",
      "name": "jumpers",
      "price": 80,
      "releaseDate": 2098475298,
    },
  ],
}
`;

exports[`GET single shoe get shoe with id 1 1`] = `
Object {
  "data": Object {
    "Brand": "nike",
    "Collection": "hypes",
    "ID": 1,
    "Section": "mens",
    "Stars": 3.5,
    "Style": "basketball",
    "description": "run",
    "name": "airss",
    "price": 40,
    "releaseDate": 2938457,
  },
}
`;

exports[`GET single shoe get shoe with id 2 1`] = `
Object {
  "data": Object {
    "Brand": "adias",
    "Collection": "air max",
    "ID": 2,
    "Section": "mens",
    "Stars": 2,
    "Style": "basketball",
    "description": "dive",
    "name": "jumpers",
    "price": 80,
    "releaseDate": 2098475298,
  },
}
`;

exports[`GET single shoe get shoe with id 3 1`] = `
Object {
  "data": Object {
    "Brand": "adias",
    "Collection": "air max",
    "ID": 3,
    "Section": "womens",
    "Stars": 0,
    "Style": "runners",
    "description": "sprint",
    "name": "kicks",
    "price": 120,
    "releaseDate": 2098475234,
  },
}
`;

exports[`GET single shoe get shoe with id 4 (doesn't exist) 1`] = `
Object {
  "empty": true,
}
`;

exports[`Post add shoe no cover image 1`] = `
Object {
  "data": Object {
    "BrandID": 2,
    "CollectionID": 1,
    "SectionID": 1,
    "StyleID": 1,
    "description": "runs fast",
    "name": "test shoe",
    "price": 50,
    "releaseDate": 29456887,
  },
}
`;

exports[`Post add shoe no cover image 2`] = `
Object {
  "data": Array [
    Object {
      "Brand": "adias",
      "Collection": "air max",
      "ID": 4,
      "Section": "mens",
      "Stars": 0,
      "Style": "runners",
      "colours": Array [],
      "description": "runs fast",
      "name": "test shoe",
      "price": 50,
      "releaseDate": 29456887,
    },
  ],
}
`;

exports[`Post add shoe no data 1`] = `
Object {
  "data": Object {
    "code": "SQLITE_CONSTRAINT",
    "errno": 19,
  },
}
`;

exports[`Post add shoe perfect amount of data 1`] = `
Object {
  "data": Object {
    "BrandID": 2,
    "CollectionID": 1,
    "CoverImage": 1,
    "SectionID": 1,
    "StyleID": 1,
    "description": "runs fast",
    "name": "test shoe",
    "price": 50,
    "releaseDate": 29456887,
  },
}
`;

exports[`Post add shoe perfect amount of data 2`] = `
Object {
  "data": Array [
    Object {
      "Brand": "adias",
      "Collection": "air max",
      "ID": 4,
      "Section": "mens",
      "Stars": 0,
      "Style": "runners",
      "colours": Array [],
      "description": "runs fast",
      "name": "test shoe",
      "price": 50,
      "releaseDate": 29456887,
    },
  ],
}
`;
